basic-template/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: basic-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: backend
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
          limits:
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: basic-template
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None # Headless service for direct pod communication
