basic-template/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: basic-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      automountServiceAccountToken: false
      containers:
      - name: database
        image: postgres
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "500Mi"
          limits:
            memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: basic-template
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None # Headless service for direct pod communication
