basic-template/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: basic-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      automountServiceAccountToken: false
      containers:
      - name: worker
        image: nginx
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
          limits:
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: basic-template
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None # Headless service for direct pod communication
